@@ -10,9 +10,10 @@
  * Licensed under GPLv2 or later, see file LICENSE in this source tree.
  */
 
-//#ifdef HAVE_MNTENT_H
 
 #include "libbb.h"
+
+#ifdef HAVE_MNTENT_H
 
 int FAST_FUNC match_fstype(const struct mntent *mt, const char *t_fstype)
 {
@@ -43,4 +44,4 @@ int FAST_FUNC match_fstype(const struct mntent *mt, const char *t_fstype)
 	return !match;
 }
 
-//#endif /* HAVE_MNTENT_H */
+#endif /* HAVE_MNTENT_H */
