@@ -614,6 +614,8 @@
 83) move some scripts to user/usb. More free space in rwfs.<br>
 84) Disable hotplug before update firmware.<br>
 85) Samba2/3 merge the smbd and nmbd binaries. The binary generated is called "smbd", while "nmbd" becomes a symlink(decrease duplicate code).<br>
+86) Fix auth type select in VPN.<br>
+87) Update busybox to 1.19.2.<br>
 
 <br><br>
 <b>For support see:</b><br>
